--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -240,9 +240,7 @@
     <item quantity="two">حفظ %1$d وسيط في الذاكرة يسمح ﻷي تطبيق آخر على الهاتف من النفاذ له. \n\nاستمر؟</item>
     <item quantity="few">حفظ %1$d وسيط في الذاكرة يسمح ﻷي تطبيق آخر على الهاتف من النفاذ له. \n\nاستمر؟</item>
     <item quantity="many">حفظ %1$d وسيط في الذاكرة يسمح ﻷي تطبيق آخر على الهاتف من النفاذ له. \n\nاستمر؟</item>
-    <item quantity="other">حفظ جميع ال %1$d ملف متعدد الوسائط في الذاكرة سيسمح ﻷي تطبيق آخر على جهازك بالنفاذ إليها.
-
- استمرار؟</item>
+    <item quantity="other">حفظ جميع ال %1$d ملف متعدد الوسائط في الذاكرة سيسمح ﻷي تطبيق آخر على جهازك بالنفاذ إليها.\n\n استمرار؟</item>
   </plurals>
   <plurals name="ConversationFragment_error_while_saving_attachments_to_sd_card">
     <item quantity="zero">وقع خطأ أثناء حفظ المرفقات في مساحة التخزين!</item>
@@ -328,6 +326,7 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified"> تم التحقق </string>
   <!--CreateProfileActivity-->
+  <string name="CreateProfileActivity__profile">الملف الشخصي</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">خطأ في اختيار صورة الملف الشخصي</string>
   <string name="CreateProfileActivity_problem_setting_profile">خطأ في إعداد الملف الشخصي</string>
   <string name="CreateProfileActivity_profile_photo">صورة الملف الشخصي</string>
@@ -879,7 +878,14 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">افتح Signal للتحقق من الإشعارات الأخيرة.</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">جهة اتصال</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">تفاعل مع رسالتك: %1$s</string> -->
+  <string name="MessageNotifier_reacted_s_to_s">تفاعل %1$s مع: \"%2$s\".</string>
+  <string name="MessageNotifier_reacted_s_to_your_video">تفاعل %1$s مع الفيديو الخاص بك.</string>
+  <string name="MessageNotifier_reacted_s_to_your_image">تفاعل %1$s مع الصورة الخاصة بك.</string>
+  <string name="MessageNotifier_reacted_s_to_your_file">تفاعل %1$s مع الملف الخاص بك.</string>
+  <string name="MessageNotifier_reacted_s_to_your_audio">تفاعل %1$s مع التسجيل الصوتي الخاص بك.</string>
+  <string name="MessageNotifier_reacted_s_to_your_view_once_photo">تفاعل %1$s مع الصورة لمشاهدة-واحدة الخاصّة بك.</string>
+  <string name="MessageNotifier_reacted_s_to_your_view_once_video">تفاعل %1$s مع فيديو المشاهدة-لمرة واحدة الخاص بك.</string>
+  <string name="MessageNotifier_reacted_s_to_your_sticker">تم تفاعل %1$s مع الملصق الخاص بك.</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">افتراضي</string>
   <string name="NotificationChannel_calls">المُكالمات</string>
@@ -1170,9 +1176,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">يتطلب Signal إعدادات الرّسائل متعدّدة الوسائط من أجل تسليم الملفّات المتعدّدة الوسائط  والمجموعات عبر مزوّد الخدمة اللاسلكيّة. جهارك لا يتيح هذه المعلومات، وهذا ما يحدث نادراً في الهواتف المقفولة أو ذات الإعدادات المقيدة.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">من اجل إرسال وسائط متعددة ورسائل إلى مجموعات أضغط على \"تم\" وأكمل الإعدادات المطلوبة. يمكن العثور على إعدادات رسائل الوسائط المتعددة الخاصة بمشغل شبكة الجوال الخاصة بك بالبحث عن \"أسم المشغل APN\". سوف تحتاج إلى القيام بهذه الخطوة مرة واحدة.</string>
   <!--profile_create_activity-->
+  <string name="CreateProfileActivity_first_name_required">الاسم الأول (مطلوب)</string>
+  <string name="CreateProfileActivity_last_name_optional">الاسم الأخير (اختياري)</string>
   <string name="CreateProfileActivity_next">التالي</string>
   <string name="CreateProfileActivity__username">اسم المستخدم</string>
-  <string name="CreateProfileActivity__create_a_username">إنشاء اسم المستخدم</string>
+  <string name="CreateProfileActivity__create_a_username">يرجى إنشاء اسم المستخدم</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">الملفّات المتعدّدة الوسائط التي تّم مشاركتها</string>
   <!--recipient_preferences-->
@@ -1529,6 +1537,61 @@
   <string name="SecondInviteReminder__description">أرسل دعوة لِ %1$s</string>
   <string name="InsightsReminder__view_insights">اعرض الرؤى</string>
   <string name="InsightsReminder__invite">أرسل دعوة</string>
+  <!--Edit KBS Pin-->
+  <!--BaseKbsPinFragment-->
+  <string name="BaseKbsPinFragment__next">التالي</string>
+  <string name="BaseKbsPinFragment__create_alphanumeric_pin">إنشاء الرقم التعريفي الشخصي بالأحرف والأرقام </string>
+  <string name="BaseKbsPinFragment__create_numeric_pin">إنشاء الرقم التعريفي الشخصي بالأرقام</string>
+  <!--CreateKbsPinFragment-->
+  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">الرقم التعريفي الشخصي يجب أن يكون %1$d حرفا على الأقل</string>
+  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">الرقم التعريفي الشخصي يجب أن يتكوّن %1$d خانة على الأقل</string>
+  <string name="CreateKbsPinFragment__create_a_new_pin">إنشاء رقم تعريفي شخصي جديد</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">يمكنك إنشاء رقم تعريفي شخصي جديد لأنك لا زلت مسجِّلا لدخولك. بعد تسجيل الخروج لن تكون هناك طريقة لاسترجاع الرقم التعريفي الشخصي الخاص بك.</string> -->
+  <string name="CreateKbsPinFragment__create_your_pin">إنشاء الرقم التعريفي الشخصي الخاص بك</string>
+  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">تعمل الأرقام التعريفيّة الخاصة على إضافة طبقة من الحماية إلى حسابك. اكتب رقم التعريف الشخصي الخاص بك واحتفظ به في مكان آمن. لأنه ليس هناك وسيلة لاستعادته.</string>
+  <!--ConfirmKbsPinFragment-->
+  <string name="ConfirmKbsPinFragment__pins_dont_match">الأرقام التعريفية الشخصية غير متطابقة. يرجى المحاولة ثانية.</string>
+  <string name="ConfirmKbsPinFragment__confirm_your_pin">يرجى تأكيد الرقم التعريفي الشخصي.</string>
+  <string name="ConfirmKbsPinFragment__pin_creation_failed">فشل إنشاء الرقم التعريفي الشخصي</string>
+  <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">لم يتم حفظ الرقم التعريفي الشخصي الخاص بك. سنطلب منك إنشاء رقم تعريفي شخصي لاحقا.</string>
+  <string name="ConfirmKbsPinFragment__pin_created">تم إنشاء الرقم التعريفي الشخصي.</string>
+  <!--KbsSplashFragment-->
+  <string name="KbsSplashFragment__introducing_pins">نقدم لكم الأرقام التعريفية الشخصية أو PINs</string>
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">أضف طبقة أخرى من الأمان لحسابك. %1$s</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">اقرأ المزيد هنا.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__registration_lock_equals_pin">قفل التسجيل = الرقم التعريفي الشخصي</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">قفل التسجيل يسمى الآن الرقم التعريفي الشخصي، وهو مسؤول عن أكثر من ذلك. حدِّثه الآن. %1$s</string>
+  <string name="KbsSplashFragment__read_more_about_pins">اقرأ المزيد عن الأرقام التعريفية الشخصية.</string>
+  <string name="KbsSplashFragment__update_pin">تحديث الرقم التعريفي الشخصي</string>
+  <string name="KbsSplashFragment__create_your_pin">إنشاء الرقم التعريفي الشخصي الخاص بك</string>
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">ذكرني لاحقا</string> -->
+  <!--KBS Reminder Dialog-->
+  <string name="KbsReminderDialog__enter_your_signal_pin">أدخل الرقم التعريفي الشخصي ل Signal</string>
+  <string name="KbsReminderDialog__to_help_you_memorize_your_pin">لمساعدتك على حفظ  رقم التعريف الشخصي الخاص بك سنطلب منك إعادة إدخاله من حين لآخر. مع مرور الوقت سنطلبه منك مرات أقل.</string>
+  <string name="KbsReminderDialog__skip">تخطّي</string>
+  <string name="KbsReminderDialog__submit">تقديم</string>
+  <string name="KbsReminderDialog__forgot_pin">هل نسيت الرقم التعريفي الشخصي؟</string>
+  <string name="KbsReminderDialog__incorrect_pin_try_again">الرقم التعريفي الشخصي غير صحيح. يرجى إعادة المحاولة.</string>
+  <!--AccountLockedFragment-->
+  <string name="AccountLockedFragment__account_locked">تم إقفال الحساب</string>
+  <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">تم إقفال حسابك لحماية خصوصيتك وأمنك.بعد مرور %1$d يوم من عدم وجود نشاط على  حسابك، سيكون بإمكانك إعادة التسجيل برقم هاتفك دون الحاجة إلى الرقم التعريفي الشخصي . سيتم حذف جميع المحتوى على حسابك.</string>
+  <string name="AccountLockedFragment__next">التالي</string>
+  <string name="AccountLockedFragment__learn_more">أعرف أكثر</string>
+  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
+  <!--KbsLockFragment-->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">أدخل الرقم التعريفي الشخصي</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">أدخل الرقم التعريفي الشخصي الذي أنشأته لحسابك، وهو مختلف عن رمز تحقق SMS.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">أدخل الرقم التعريفي الشخصي بالأحرف والأرقام</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">أدخل الرقم التعريفي الشخصي بالأرقام</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">التالي</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">الرقم التعريفي الشخصي غير صحيح. يرجى إعادة المحاولة.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">الرقم التعريفي الشخصي غير صحيح. %1$d محاولة باقية.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">هل نسيت الرقم التعريفي الشخصي؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">الرقم التعريفي الشخصي غير صحيح</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">باقي لديك %1$d محاولة. اذا نفذت المحاولات سيتم إقفال حسابك لمدة %2$d يوما. بعد %3$d يوم من عدم وجود نشاط على حسابك، سيمكنك إعادة التسجيل دون إدخال الرقم التعريفي الشخصي . سيتم مسح حسابك وحذف جميع محتواه.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">هل نسيت الرقم التعريفي الشخصي؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">من أجل الحفاظ على خصوصيتك وأمانك، لا توجد هناك طريقة لاسترجاع الرقم التعريفي الشخصي. اذا نفذت المحاولات، سيمكنك إعادة التّحقق من خلال SMS بعد %1$d يوما من عدم وجود نشاط في حسابك. في تلك الحالة سيتم مسح حسابك وجميع محتواه.</string> -->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">أيقونة النقل.</string>
   <string name="ConversationListFragment_loading">قيد التحميل…</string>
@@ -1590,6 +1653,10 @@
   <string name="preferences_app_protection__screen_lock">قفل الشاشة</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">منع الوصول إلى Signal عبر قفل الشاشة أو بصمة الإصبع</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">نفاذ مهلة قفل الشاشة</string>
+  <string name="preferences_app_protection__signal_pin">الرقم التعريفي الشخصي ل Signal</string>
+  <string name="preferences_app_protection__pin">الرقم التعريفي الشخصي</string>
+  <string name="preferences_app_protection__change">تغيير</string>
+  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">يضيف الرقم التعريفي الشخصي طبقة إضافية من الأمان وهو طريقة لعمل نسخة احتياطية من حسابك. سيتم سؤالك عنه عند التسجيل برقمك الهاتفي في Signal. اذا نسيت الرقم التعريفي الشخصي سيتم إقفال حسابك لمدة 7 أيام.</string>
   <string name="AppProtectionPreferenceFragment_none">لا شيء </string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">الرقم التعريفي الشخصي لحماية التسجيل مختلف عن رمز التحقق في رسالة SMS التي استقبلتها الآن. يُرجى إدخال الرقم التعريفي الشخصي الذي قمت بتحديده في إعدادات التطبيق من قبل.</string>
   <string name="registration_activity__registration_lock_pin">الرقم التعريفي الشخصي لحماية التسجيل</string>
@@ -1617,6 +1684,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">الرقم التعريفي الشخصي لحماية التسجيل يحمي رقم هاتفك من محاولات غير مصرّحة  للتسجيل في الخدمة. يمكن إلغاء هذه الخاصية في أي وقت عبر إعدادات الخصوصية في تطبيق Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">الرقم التعريفي الشخصي لحماية التسجيل</string>
   <string name="RegistrationLockDialog_enable">تفعيل</string>
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">الرقم التعريفي الشخصي لحماية التسجيل يجب أن يتكون من %d رقما على الأقل.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">الأرقام التي أدخلتها غير متطابقة.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">خطأ أثناء محاولة الاتصال بالخدمة</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">إلغاء الرقم التعريفي الشخصي لحماية التسجيل؟</string>
