--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -91,7 +91,7 @@
   <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Puedes compartir con un máximo de %d chats.</string>
   <string name="CameraContacts_select_signal_recipients">Selecciona contactos de Signal</string>
   <string name="CameraContacts_no_signal_contacts">No hay contactos de Signal</string>
-  <string name="CameraContacts_you_can_only_use_the_camera_button">Sólo puedes usar el botón de la cámara para enviar fotos a contactos en Signal.</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">El botón de la cámara lo puedes usar para enviar fotos a contactos en Signal sólamente.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">¿No encuentras a quien buscas?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Invita a un contacto a usar Signal</string>
   <string name="CameraContacts__menu_search">Buscar</string>
@@ -270,6 +270,7 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificado</string>
   <!--CreateProfileActivity-->
+  <string name="CreateProfileActivity__profile">Perfil</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">Fallo al establecer la foto de perfil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problema al crear el perfil</string>
   <string name="CreateProfileActivity_profile_photo">Foto de perfil</string>
@@ -598,7 +599,7 @@ número de teléfono
 (%s) no es válido.
 </string>
   <string name="RegistrationActivity_missing_google_play_services">Servicios de Google Play no instalados</string>
-  <string name="RegistrationActivity_this_device_is_missing_google_play_services">Este dispositivo no tiene los Servicios de Google Play instalados. Aún así puedes usar Signal, pero esta configuración puede resultar en un bajo rendimiento o fiabilidad.\n\nSi no eres un usuario avanzado, no estás ejecutando una ROM cocinada de Android, o crees que estás viendo esto indebidamente por favor, contacta con support@signal.org para solución de problemas.</string>
+  <string name="RegistrationActivity_this_device_is_missing_google_play_services">Este dispositivo no dispone de los Servicios de Google Play. Aún así puedes usar Signal, pero esta configuración puede resultar en un bajo rendimiento o fiabilidad.\n\nSi no eres un usuario avanzado, no estás ejecutando una ROM cocinada de Android, o crees que estás viendo esto indebidamente, contacta con support@signal.org para la solución del problema.</string>
   <string name="RegistrationActivity_i_understand">Entiendo</string>
   <string name="RegistrationActivity_play_services_error">Fallo en «Play Services»</string>
   <string name="RegistrationActivity_google_play_services_is_updating_or_unavailable">Google Play Services se está actualizando o está temporalmente suspendido. Por favor, inténtalo de nuevo.</string>
@@ -778,9 +779,9 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="MessageNotifier_most_recent_from_s">Más recientes desde: %1$s</string>
   <string name="MessageNotifier_locked_message">Mensaje cerrado</string>
   <string name="MessageNotifier_media_message_with_text">Mensaje multimedia: %s</string>
-  <string name="MessageNotifier_message_delivery_failed">Entrega de mensaje fallida.</string>
+  <string name="MessageNotifier_message_delivery_failed">Fallo al entregar mensaje.</string>
   <string name="MessageNotifier_failed_to_deliver_message">Fallo al entregar mensaje.</string>
-  <string name="MessageNotifier_error_delivering_message">Error entregando mensaje.</string>
+  <string name="MessageNotifier_error_delivering_message">Fallo al entregar el mensaje.</string>
   <string name="MessageNotifier_mark_all_as_read">Marcar todos como leídos</string>
   <string name="MessageNotifier_mark_read">Marcar como leído</string>
   <string name="MessageNotifier_media_message">Mensaje multimedia</string>
@@ -794,7 +795,14 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Abre Signal para comprobar las últimas notificaciones.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Contacto</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Reacción a tu mensaje: %1$s</string> -->
+  <string name="MessageNotifier_reacted_s_to_s">Reacción %1$s a: «%2$s».</string>
+  <string name="MessageNotifier_reacted_s_to_your_video">Reacción a tu video: %1$s</string>
+  <string name="MessageNotifier_reacted_s_to_your_image">Reacción a tu imagen: %1$s</string>
+  <string name="MessageNotifier_reacted_s_to_your_file">Reacción a tu fichero: %1$s.</string>
+  <string name="MessageNotifier_reacted_s_to_your_audio">Reacción a tu audio: %1$s.</string>
+  <string name="MessageNotifier_reacted_s_to_your_view_once_photo">Reacción a tu foto para ver solo una vez: %1$s.</string>
+  <string name="MessageNotifier_reacted_s_to_your_view_once_video">Reacción a tu video para ver solo una vez: %1$s.</string>
+  <string name="MessageNotifier_reacted_s_to_your_sticker">Reacción a tu cromo: %1$s.</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Por defecto</string>
   <string name="NotificationChannel_calls">Llamadas</string>
@@ -1052,10 +1060,10 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Para enviar mensajes multimedia y de grupo, toca «Aceptar» y completa las configuraciones solicitadas. Las configuraciones de MMS para tu proveedor generalmente se pueden localizar buscando por «APN de proveedor». Sólo necesitarás hacer esto una vez.</string>
   <!--profile_create_activity-->
   <string name="CreateProfileActivity_first_name_required">Nombre (necesario)</string>
-  <string name="CreateProfileActivity_last_name_optional">Apellido (opcional)</string>
+  <string name="CreateProfileActivity_last_name_optional">Apellido(s) (opcional)</string>
   <string name="CreateProfileActivity_next">Siguiente</string>
   <string name="CreateProfileActivity__username">Nombre de usuario</string>
-  <string name="CreateProfileActivity__create_a_username">Crear un nombre de usuario</string>
+  <string name="CreateProfileActivity__create_a_username">Crear nombre de usuario</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Archivos multimedia compartidos</string>
   <!--recipient_preferences-->
@@ -1403,6 +1411,61 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="SecondInviteReminder__description">Invitar a %1$s</string>
   <string name="InsightsReminder__view_insights">Ver estadísticas</string>
   <string name="InsightsReminder__invite">Invitar</string>
+  <!--Edit KBS Pin-->
+  <!--BaseKbsPinFragment-->
+  <string name="BaseKbsPinFragment__next">Siguiente</string>
+  <string name="BaseKbsPinFragment__create_alphanumeric_pin">Crear PIN alfanumérico</string>
+  <string name="BaseKbsPinFragment__create_numeric_pin">Crear PIN numérico</string>
+  <!--CreateKbsPinFragment-->
+  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">El PIN debe constar de al menos %1$d caracteres</string>
+  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">El PIN debe constar al menos de %1$d cifras</string>
+  <string name="CreateKbsPinFragment__create_a_new_pin">Crear nuevo PIN</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Al estar la sesión aún abierta, puedes crear un nuevo PIN. Cuando cierres la sesión, no habrá manera de recuperar tu PIN.</string> -->
+  <string name="CreateKbsPinFragment__create_your_pin">Crea tu PIN</string>
+  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">El PIN añade una capa extra de seguridad a tu cuenta. Escribe tu PIN y mantenlo en un lugar seguro. No se puede recuperar.</string>
+  <!--ConfirmKbsPinFragment-->
+  <string name="ConfirmKbsPinFragment__pins_dont_match">El PIN no coincide. Inténtalo de nuevo.</string>
+  <string name="ConfirmKbsPinFragment__confirm_your_pin">Confirma el número PIN.</string>
+  <string name="ConfirmKbsPinFragment__pin_creation_failed">Fallo al crear el PIN</string>
+  <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Tu PIN no se ha guardado. Volveremos a preguntarte para crear el PIN más tarde.</string>
+  <string name="ConfirmKbsPinFragment__pin_created">PIN creado.</string>
+  <!--KbsSplashFragment-->
+  <string name="KbsSplashFragment__introducing_pins">¡El PIN ha llegado!</string>
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Añade otro nivel de seguridad a tu cuenta. %1$s</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Lee más aquí.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__registration_lock_equals_pin">Bloqueo de registro = PIN</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Tu bloqueo de registro ahora se llama PIN, y permite más funciones. Actualiza ahora. %1$s</string>
+  <string name="KbsSplashFragment__read_more_about_pins">Saber más sobre el PIN.</string>
+  <string name="KbsSplashFragment__update_pin">Actualizar PIN</string>
+  <string name="KbsSplashFragment__create_your_pin">Crea tu PIN</string>
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Recordar más tarde</string> -->
+  <!--KBS Reminder Dialog-->
+  <string name="KbsReminderDialog__enter_your_signal_pin">Introduce tu PIN de Signal</string>
+  <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Para ayudarte a memorizar el PIN, te solicitaremos introducirlo de vez en cuando. Con el tiempo lo solicitaremos con menos frecuencia.</string>
+  <string name="KbsReminderDialog__skip">Omitir</string>
+  <string name="KbsReminderDialog__submit">Solicitar</string>
+  <string name="KbsReminderDialog__forgot_pin">¿PIN olvidado?</string>
+  <string name="KbsReminderDialog__incorrect_pin_try_again">PIN incorrecto. Inténtalo de nuevo.</string>
+  <!--AccountLockedFragment-->
+  <string name="AccountLockedFragment__account_locked">Cuenta bloqueada</string>
+  <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Tu cuenta ha sido bloqueada para proteger tu privacidad y seguridad. Después de %1$d días de inactividad en tu cuenta, podrás volver a registrar este número de teléfono sin necesidad de tu PIN. Se borrará todo el contenido de tu cuenta.</string>
+  <string name="AccountLockedFragment__next">Siguiente</string>
+  <string name="AccountLockedFragment__learn_more">Saber más</string>
+  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
+  <!--KbsLockFragment-->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Introduce tu PIN</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Introduce el PIN que has seleccionado al crear tu cuenta de Signal. El PIN es diferente al del SMS de verificación.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Introduce PIN alfanumérico</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Introduce PIN numérico</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Siguiente</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PIN incorrecto. Inténtalo de nuevo.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PIN incorrecto. Te quedan %1$d intentos.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">¿No recuerdas el PIN?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PIN incorrecto</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Te quedan %1$d intentos. Si superas el número de intentos, tu cuenta quedará bloqueada por %2$d días. Después de %3$d días de inactividad, podrás volver a registrarte sin tu PIN. Todo el contenido de tu cuenta se eliminará.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">¿Has olvidado el PIN?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Para proteger tu privacidad y seguridad, no hay manera de recuperar tu PIN. Si agotas todos los intentos, podrás volver a verificar tu cuenta por SMS tras %1$d días de inactividad. En este caso, todo el contenido de tu cuenta se eliminará.</string> -->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icono de transporte</string>
   <string name="ConversationListFragment_loading">Cargando …</string>
@@ -1460,6 +1523,10 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences_app_protection__screen_lock">Bloqueo de pantalla</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Bloquea el acceso a Signal con el código de bloqueo de Android o la huella dactilar.</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Tiempo de inactividad para el bloqueo de pantalla</string>
+  <string name="preferences_app_protection__signal_pin">PIN de Signal</string>
+  <string name="preferences_app_protection__pin">PIN</string>
+  <string name="preferences_app_protection__change">Modificar</string>
+  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Tu PIN añade una capa de seguridad extra y protege tu cuenta. Te preguntaremos el PIN al registrar tu número desde otro dispositivo en Signal. Si olvidas tu PIN, bloquearemos tu cuenta durante 7 días.</string>
   <string name="AppProtectionPreferenceFragment_none">Ninguno</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">El PIN de bloqueo de registro es distinto del código de verificación que acabas de recibir por SMS. Por favor, introduce el PIN que has seleccionado previamente en los ajustes de Signal.</string>
   <string name="registration_activity__registration_lock_pin">PIN de bloqueo de registro</string>
@@ -1487,7 +1554,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">El bloqueo de registro ayuda a proteger tu número de teléfono de intentos de registro no autorizados. Esta característica se puede desactivar en cualquier momento en la configuración de privacidad de Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Bloqueo de registro</string>
   <string name="RegistrationLockDialog_enable">Activar</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">El PIN d bloqueo de registro debe tener al menos %d digitos.</string>
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">El PIN de bloqueo de registro debe tener al menos %d digitos.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Los dos PINs no coinciden.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Fallo al conectar con el servicio</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">¿Desactivar el PIN de bloqueo de registro?</string>
