--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -1324,6 +1324,21 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="InsightsDashboardFragment__send">Sūtīt</string>
   <string name="FirstInviteReminder__title">Uzaicināt uz Signal</string>
   <string name="InsightsReminder__invite">Uzacināt</string>
+  <!--Edit KBS Pin-->
+  <!--BaseKbsPinFragment-->
+  <string name="BaseKbsPinFragment__next">Tālāk</string>
+  <!--CreateKbsPinFragment-->
+  <!--ConfirmKbsPinFragment-->
+  <!--KbsSplashFragment-->
+  <!--KBS Reminder Dialog-->
+  <string name="KbsReminderDialog__skip">Izlaist</string>
+  <string name="KbsReminderDialog__submit">Iesniegt</string>
+  <string name="KbsReminderDialog__forgot_pin">Aizmirsāt PIN?</string>
+  <!--AccountLockedFragment-->
+  <string name="AccountLockedFragment__next">Tālāk</string>
+  <!--KbsLockFragment-->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Tālāk</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Aizmirsāt PIN?</string> -->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transporta ikona</string>
   <string name="ConversationListFragment_loading">Lādē…</string>
