--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -1283,6 +1283,21 @@
   <string name="SecondInviteReminder__description">Пошаљите позивницу %1$s</string>
   <string name="InsightsReminder__view_insights">Преглед увида</string>
   <string name="InsightsReminder__invite">Пошаљи позивницу</string>
+  <!--Edit KBS Pin-->
+  <!--BaseKbsPinFragment-->
+  <string name="BaseKbsPinFragment__next">Даље</string>
+  <!--CreateKbsPinFragment-->
+  <!--ConfirmKbsPinFragment-->
+  <!--KbsSplashFragment-->
+  <!--KBS Reminder Dialog-->
+  <string name="KbsReminderDialog__skip">Прескочи</string>
+  <string name="KbsReminderDialog__submit">Пошаљи</string>
+  <string name="KbsReminderDialog__forgot_pin">Заборавили сте ПИН?</string>
+  <!--AccountLockedFragment-->
+  <string name="AccountLockedFragment__next">Даље</string>
+  <!--KbsLockFragment-->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Даље</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Заборавили сте ПИН?</string> -->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Икона преноса</string>
   <string name="ConversationListFragment_loading">Учитавање…</string>
