--- a/app/src/main/res/values-sw/strings.xml
+++ b/app/src/main/res/values-sw/strings.xml
@@ -270,6 +270,7 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Imethibitishwa</string>
   <!--CreateProfileActivity-->
+  <string name="CreateProfileActivity__profile">Wasifa</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">Hitilafu kuweka picha ya wasifu</string>
   <string name="CreateProfileActivity_problem_setting_profile">Hitilafu kuweka wasifu</string>
   <string name="CreateProfileActivity_profile_photo">Picha ya wasifu</string>
@@ -788,7 +789,14 @@ nambari yako ya simu</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Fungua Signal kuangalia taarifa mpya</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Mawasiliano</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Alitoa hisia kwa ujumbe wako: %1$s</string> -->
+  <string name="MessageNotifier_reacted_s_to_s">Aliitikia %1$skwa: \"%2$s\".</string>
+  <string name="MessageNotifier_reacted_s_to_your_video">Aliitikia %1$s kwa video yako.</string>
+  <string name="MessageNotifier_reacted_s_to_your_image">Aliitikia %1$s kwa taswira yako.</string>
+  <string name="MessageNotifier_reacted_s_to_your_file">Aliitikia %1$s kwa faili yako.</string>
+  <string name="MessageNotifier_reacted_s_to_your_audio">Aliitikia %1$s kwa sauti yako.</string>
+  <string name="MessageNotifier_reacted_s_to_your_view_once_photo">Aliitikia %1$s kwa picha yako ya mtazamo-mmoja.</string>
+  <string name="MessageNotifier_reacted_s_to_your_view_once_video">Aliitikia %1$s kwa video yako ya mtazamo-mmoja.</string>
+  <string name="MessageNotifier_reacted_s_to_your_sticker">Aliitikia %1$s kwa kibandiko chako.</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Chaguo Msingi</string>
   <string name="NotificationChannel_calls">Simu</string>
@@ -1397,6 +1405,61 @@ nambari yako ya simu</string>
   <string name="SecondInviteReminder__description">Alika %1$s</string>
   <string name="InsightsReminder__view_insights">Tazama Ufahamu</string>
   <string name="InsightsReminder__invite">Alika</string>
+  <!--Edit KBS Pin-->
+  <!--BaseKbsPinFragment-->
+  <string name="BaseKbsPinFragment__next">Ifuatayo</string>
+  <string name="BaseKbsPinFragment__create_alphanumeric_pin">Buni PINI ya herufi na maneno</string>
+  <string name="BaseKbsPinFragment__create_numeric_pin">Buni PINI ya herufi</string>
+  <!--CreateKbsPinFragment-->
+  <string name="CreateKbsPinFragment__pin_must_be_at_least_characters">PINI lazima angalau iwe na alama%1$d.</string>
+  <string name="CreateKbsPinFragment__pin_must_be_at_least_digits">PINI lazima iwe angalau herufi %1$d</string>
+  <string name="CreateKbsPinFragment__create_a_new_pin">Buni PINI mpya</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateKbsPinFragment__because_youre_still_logged_in">Kwa sababu bado uko mtandaoni, unaweza kubuni PINI mpya. Unapotoka, hamna njia yoyote ile ya kuokoa PINI yako.</string> -->
+  <string name="CreateKbsPinFragment__create_your_pin">Buni PINI yako</string>
+  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PINI zinaongeza safu ya ziada kwenye akaunti yako. Andika PINI yako mahali na uiweke pahali salama. Haiwezi kuokolewa.</string>
+  <!--ConfirmKbsPinFragment-->
+  <string name="ConfirmKbsPinFragment__pins_dont_match">PINI hazifanani. Jaribu tena.</string>
+  <string name="ConfirmKbsPinFragment__confirm_your_pin">Thibitisha PINI yako.</string>
+  <string name="ConfirmKbsPinFragment__pin_creation_failed">Imeshindwa kubuni PINI</string>
+  <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">PINI yako haikuhifadhiwa. Tutakuarifu baadaye ubuni PINI.</string>
+  <string name="ConfirmKbsPinFragment__pin_created">PINI imebuniwa.</string>
+  <!--KbsSplashFragment-->
+  <string name="KbsSplashFragment__introducing_pins">Kujulisha kuhusu PINI.</string>
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__add_another_level_of_security_to_your_account">Ongeza kiwango kingine cha usalama kwenye akaunti yako. %1$s</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_here">Soma mengi zaidi hapa.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__read_more_link">https://signal.org/blog/secure-value-recovery/</string> -->
+  <string name="KbsSplashFragment__registration_lock_equals_pin">Kufuli ya Usajili = PINI</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Kufuli Yako ya Usajili sasa inaitwa PINI na inafanya mengi zaidi. Isasishe sasa. %1$s</string>
+  <string name="KbsSplashFragment__read_more_about_pins">Soma zaidi kuhusu PINI.</string>
+  <string name="KbsSplashFragment__update_pin">Sasisha PINI</string>
+  <string name="KbsSplashFragment__create_your_pin">Buni PINI yako</string>
+  <!-- Removed by excludeNonTranslatables <string name="KbsSplashFragment__remind_me_later">Nikumbushe baadaya</string> -->
+  <!--KBS Reminder Dialog-->
+  <string name="KbsReminderDialog__enter_your_signal_pin">Weka PINI yako ya Signal</string>
+  <string name="KbsReminderDialog__to_help_you_memorize_your_pin">Ili kukusaidia kukariri PINI yako, tutakuuliza uiingize mara kwa mara. Tunapunguza kukuuliza baada ya muda.</string>
+  <string name="KbsReminderDialog__skip">Ruka</string>
+  <string name="KbsReminderDialog__submit">Wasilisha</string>
+  <string name="KbsReminderDialog__forgot_pin">Umesahau Nenosiri?</string>
+  <string name="KbsReminderDialog__incorrect_pin_try_again">PINI si sahihi. Jaribu tena.</string>
+  <!--AccountLockedFragment-->
+  <string name="AccountLockedFragment__account_locked">Akaunti imefungwa</string>
+  <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Akaunti yako imefungwa ili kulinda faragha yako na usalama wako. Baada ya siku %1$d za kimya kwenye akaunti yako utaweza kusajili upya nambari hii wa simu bila kuhitaji pini yako. Yote yaliyomo yatafutwa.</string>
+  <string name="AccountLockedFragment__next">Ifuatayo</string>
+  <string name="AccountLockedFragment__learn_more">Fahamu Zaidi</string>
+  <string name="AccountLockedFragment__learn_more_url">https://signal.org/blog/secure-value-recovery/</string>
+  <!--KbsLockFragment-->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_your_pin">Weka PINI yako</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_the_pin_you_created">Weka PINI uliyobuni kwa hii akaunti. Hii ni tofauti na msimbo wako wa kuhakikisha kupitia Ujumbe Mfupi.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_alphanumeric_pin">Weka PINI yako ya herufi na maneno</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__enter_numeric_pin">Weka PINI yako ya herufi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__next">Ifuatayo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_try_again">PINI si sahihi. Jaribu tena.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin_d_attempts_remaining">PINI si sahihi. Majaribio %1$d yamebakia.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_pin">Umesahau Nenosiri?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__incorrect_pin">PINI si sahihi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__you_have_d_attempts_remaining">Una majaribio %1$d yaliyobakia. Majaribio yako yakiisha akaunti yako itafungwa kwa siku %2$d. Baada ya siku %3$d za kimya, unaweza kusajili upya bila PINI yako. Akaunti yako itafutwa na yote yaliyomo kufutwa.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__forgot_your_pin">Je, umesahau PINI yako?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="KbsLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">Kwa ajili ya faragha yako na usalama wako, hakuna njia yoyote ya kuokoa PINI yako. Majaribio yako yakiisha, unaweza kuhakikisha kupitia Ujumbe Mfupi baada ya siku %1$d za kimya. Kwa kesi hii, akaunti yako itafutwa na yote yaliyomo kufutwa.</string> -->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikoni ya usafiri</string>
   <string name="ConversationListFragment_loading">Inafunguka</string>
@@ -1455,6 +1518,10 @@ nambari yako ya simu</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">
 Funga ufikiaji wa Signal na ufungaji wa Android au alama za vidole</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Muda wa kuisha Screen Lock isipokuwa na shughuli</string>
+  <string name="preferences_app_protection__signal_pin">PINI ya Signal</string>
+  <string name="preferences_app_protection__pin">PINI</string>
+  <string name="preferences_app_protection__change">Badilisha</string>
+  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PINI yako inaongeza safu mpya ya usalama na inaweka hifadhi ya akaunti yako. Utaitishwa utakaposajili nambari yako ya simu kwenye Signal. Ukisahau PINI yako, utafungiwa nje ya akaunti yako kwa siku saba.</string>
   <string name="AppProtectionPreferenceFragment_none">Hakuna</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Nambari ya PIN ya Usajili si sawa na msimbo wa uthibitisho wa SMS unayopokea tu. Tafadhali ingiza PIN uliyoiweka hapo awali katika programu.</string>
   <string name="registration_activity__registration_lock_pin">Nenosiri la usajili</string>
